--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/demos/18-gallery/index.html"
+    "livePreview.defaultPreviewPath": "/demos/20-media-queries/index.html"
 }
